--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </p>
             <p><strong>You <i>know</i> you want to.</strong></p>
         </div>
-        <form action="http://www.google.com" id="form" method="post" onsubmit="event.preventDefault();">
+        <form action="http://www.google.com" id="form" method="post">
             <h2>Let's do this!</h2>
             <div class="fill-out">
                 <div>
